--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,20 +29,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  firebase_core: ^3.5.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
-  sqflite: ^2.3.3+1
   flutter_screenutil: ^5.9.3
   outlined_text: ^1.0.1
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
