--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_screenutil: ^5.9.3
   outlined_text: ^1.0.1
+  sentry_flutter: ^8.9.0
   sqflite: ^2.3.3+1
 
 dev_dependencies:
