--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_screenutil: ^5.9.3
+  get_it: ^8.0.0
   image_picker: ^1.1.2
   outlined_text: ^1.0.1
   sentry_flutter: ^8.9.0
