--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.3
+version: 1.0.4
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
@@ -33,6 +33,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_localizations:
+    sdk: flutter
   flutter_screenutil: ^5.9.3
   get_it: ^8.0.0
   image_picker: ^1.1.2
@@ -40,9 +42,8 @@ dependencies:
   pdf: ^3.11.1
   printing: ^5.13.3
   sentry_flutter: ^8.9.0
+  shared_preferences: ^2.3.2
   sqflite: ^2.3.3+1
-  flutter_localizations:
-    sdk: flutter
 
 dev_dependencies:
   flutter_lints: ^3.0.0
