--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.4
+version: 1.0.5
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
@@ -35,11 +35,16 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  flutter_pdfview: ^1.3.3
   flutter_screenutil: ^5.9.3
   get_it: ^8.0.0
   image_picker: ^1.1.2
+  intl: ^0.19.0
+  open_file: ^3.5.7
   outlined_text: ^1.0.1
+  path_provider: ^2.1.4
   pdf: ^3.11.1
+  permission_handler: ^11.3.1
   printing: ^5.13.3
   sentry_flutter: ^8.9.0
   shared_preferences: ^2.3.2
