--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,27 +28,37 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  # Firebase Packages
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
   cupertino_icons: ^1.0.6
-  firebase_core: ^3.5.0
   flutter:
     sdk: flutter
+  # state management Packages
   flutter_bloc: ^8.1.6
+  # flutter_localizations Packages
+  intl: ^0.19.0
   flutter_localizations:
     sdk: flutter
-  flutter_pdfview: ^1.3.3
+  # responsive ui Packages
   flutter_screenutil: ^5.9.3
-  get_it: ^8.0.0
-  image_picker: ^1.1.2
-  intl: ^0.19.0
+  # pdf Packages
   open_file: ^3.5.7
-  outlined_text: ^1.0.1
   path_provider: ^2.1.4
   pdf: ^3.11.1
-  permission_handler: ^11.3.1
   printing: ^5.13.3
-  sentry_flutter: ^8.9.0
-  shared_preferences: ^2.3.2
+  permission_handler: ^11.3.1
+  flutter_pdfview: ^1.3.3
+  # Database Packages
   sqflite: ^2.3.3+1
+  shared_preferences: ^2.3.2
+  ##
+  get_it: ^8.0.0
+  image_picker: ^1.1.2
+  # text style
+  outlined_text: ^1.0.1
+  # Tracking users errors
+  sentry_flutter: ^8.9.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
